# Header files need not be enumerated
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR} ${PROJECT_BINARY_DIR})

###########
# LIB RANKSTR #
###########

# Install header files
LIST(APPEND librankstr_install_headers
	rankstr_mpi.h
)
INSTALL(FILES ${librankstr_install_headers} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})

LIST(APPEND librankstr_srcs
    rankstr_mpi.c
)

# RANKSTR Library
ADD_LIBRARY(rankstr_o OBJECT ${librankstr_srcs})

IF(BUILD_SHARED_LIBS)
   ADD_LIBRARY(rankstr SHARED $<TARGET_OBJECTS:rankstr_o>)
   TARGET_LINK_LIBRARIES(rankstr ${RANKSTR_EXTERNAL_LIBS})
   SET_TARGET_PROPERTIES(rankstr PROPERTIES OUTPUT_NAME rankstr CLEAN_DIRECT_OUTPUT 1)
   INSTALL(TARGETS rankstr DESTINATION ${CMAKE_INSTALL_LIBDIR})
ENDIF()

ADD_LIBRARY(rankstr-static STATIC $<TARGET_OBJECTS:rankstr_o>)
IF(RANKSTR_LINK_STATIC)
        SET_TARGET_PROPERTIES(rankstr-static PROPERTIES LINK_SEARCH_START_STATIC 1)
        SET_TARGET_PROPERTIES(rankstr-static PROPERTIES LINK_SEARCH_END_STATIC 1)
ENDIF(RANKSTR_LINK_STATIC)
TARGET_LINK_LIBRARIES(rankstr-static ${RANKSTR_EXTERNAL_LIBS})

SET_TARGET_PROPERTIES(rankstr-static PROPERTIES OUTPUT_NAME rankstr CLEAN_DIRECT_OUTPUT 1)
INSTALL(TARGETS rankstr-static DESTINATION ${CMAKE_INSTALL_LIBDIR})
